--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
 
     <main>
       <section class="portfolio">
-        <!-- <h1>Примеры наших работ</h1> -->
+        <h1 class="portfolio-heading">Примеры наших работ</h1>
         <div class="container">
           <ul class="list list-menu">
             <li class="portfolio-list-item">
